src/pages/game/intro/index.less
@import url('../../../settings/config.less');

.Intro {
	@apply w-full h-full py-20 overflow-hidden;

	.icon0 {
		&::before {
			content: '1';
		}
	}

	.icon1 {
		&::before {
			content: '2';
		}
	}

	.icon2 {
		&::before {
			content: '3';
		}
	}

	.title {
		@apply w-full flex justify-center flex-row items-center font-MiBold text-3xl;

		&::before {
			background: rgb(119, 86, 53);
			background: linear-gradient(135deg, rgba(119, 86, 53, 1) 50%, rgba(87, 47, 14, 1) 50.1%);
			@apply w-10 h-10 rounded-full flex justify-center items-center text-white m-3;
		}
	}

	.subline {
		min-height: 50px;
		@apply w-full flex flex-row justify-center items-center font-MiMedium text-2xl;

		span {
			@apply font-MiBold;
		}

		.mushroom {
			@apply relative w-12 h-12 rounded-full bg-white ml-3;

			&::after {
				position: absolute;
				top: 50%;
				left: 50%;
				margin-top: 0 - image-height(@img) * @scale * 0.5 - 10px;
				margin-left: 0 - image-width(@img) * @scale * 0.5 + 3px;
				width: image-width(@img) * @scale;
				height: image-height(@img) * @scale;
				background-image: url(@img);
				background-size: 100%;
				content: '';

				@scale: 0.39;
				@img: './img/mushroom.png';
			}
		}

		.bamboo {
			@apply relative w-12 h-12 rounded-full bg-white m-3;

			&::after {
				position: absolute;
				top: 50%;
				left: 50%;
				margin-top: 0 - image-height(@img) * @scale * 0.5 - 10px;
				margin-left: 0 - image-width(@img) * @scale * 0.5 + 3px;
				width: image-width(@img) * @scale;
				height: image-height(@img) * @scale;
				background-image: url(@img);
				background-size: 100%;
				content: '';

				@scale: 0.39;
				@img: './img/bamboo.png';
			}
		}
	}

	.step2 {
		background-image: url('./img/3.gif');
	}

	.step1 {
		background-image: url('./img/2.gif');
	}

	.step0 {
		background-image: url('./img/1.gif');

		& > div {
			position: absolute;
			top: 0;
			right: 0;
			bottom: 0;
			left: 0;

			@apply flex justify-center items-center;

			.panel {
				display: none;
			}

			@keyframes keyboard {
				0% {
					background-position-y: 0%;
				}
				100% {
					background-position-y: 125%;
				}
			}

			.keyboard {
				width: image-width(@img) * @scale;
				height: image-height(@img) * @scale * 0.2;
				background-image: url(@img);
				background-position-y: 0%;
				background-size: 100%;
				animation: keyboard 5s steps(5) infinite;

				@scale: 1.2;
				@img: './img/keyboard.svg';
			}
		}
	}

	.demo {
		padding-bottom: 100%;
		width: 100%;
		background-size: cover;
		background-repeat: no-repeat;
		@apply bg-backgroundColor border-4 border-white rounded-2xl;
	}

	@media only screen and (max-width: @MD) {
		.title {
			@apply text-5xl;
			&::before {
				@apply w-16 h-16;
			}
		}

		.subline {
			@apply text-4xl;

			.mushroom {
				@apply w-20 h-20;

				&::after {
					margin-top: 0 - image-height(@img) * @scale * 0.5 - 12px;
					margin-left: 0 - image-width(@img) * @scale * 0.5 + 1px;
					width: image-width(@img) * @scale;
					height: image-height(@img) * @scale;

					@scale: 0.6;
					@img: './img/mushroom.png';
				}
			}

			.bamboo {
				@apply w-20 h-20;

				&::after {
					margin-top: 0 - image-height(@img) * @scale * 0.5 - 12px;
					margin-left: 0 - image-width(@img) * @scale * 0.5 + 1px;
					width: image-width(@img) * @scale;
					height: image-height(@img) * @scale;

					@scale: 0.6;
					@img: './img/bamboo.png';
				}
			}
		}

		.step0 {
			& > div {
				.keyboard {
					display: none;
				}

				.panel {
					background-color: rgba(255, 255, 255, 0.7);
					@apply pointer-events-none h-48 w-48 rounded-full block;

					.stick {
						animation: joystickDemo 5s ease-in-out infinite;
						@apply absolute left-1/2 top-1/2 -ml-16 -mt-16 h-24 w-24 rounded-full bg-white;
					}
				}
			}
		}
	}
}

